# FestoCodingChallenge2023

./: README.md  pyproject.toml
chapter1/: __main__.py  puzzle1.py  puzzle2.py  puzzle3.py  test_puzzle1.py  test_puzzle2.py  test_puzzle3.py
chapter2/: __main__.py  puzzle1.py  puzzle2.py  puzzle3.py  test_puzzle1.py  test_puzzle2.py  test_puzzle3.py
chapter3/: __main__.py  generate_keys.py  puzzle1.py  puzzle2.py  puzzle3.py  test_puzzle1.py  test_puzzle2.py  test_puzzle3.py
chapter3/resources/: int_factor.txt  target_ints.txt
final/: __main__.py
tutorial/: __main__.py  puzzle1.py  puzzle2.py  puzzle3.py  test_puzzle1.py  test_puzzle2.py  test_puzzle3.py
